	  (Replaced by settings in vlimits.default.) [869411]
	- Remove references to --eanble-defaultquota in documentation.
	- vdelivermail.c: Consistent return values in deliver_mail().
	- More updates to build files. [874831]

	Bill Shupp
	- Add -o option to vmoduser to set V_OVERRIDE flag. [875505]

	Casey Zacek
	- Create maildirsize file in vsetuserquota(). [869457]

5.4.0-rc1 - released 1-Jan-04

	Michael Bowe
	- Code fixes and documentation work for LDAP module. 
	  Incl updated README.ldap, vldap.c, vldap.h, ldap/slapd.conf, 
	  ldap/vpopmail.ldif. [863881] [811000] [864643]
	- Rewrote the README.mysql based on my web based guide.
	- Documentation tweaks for README.pgsql, README.roamingusers.

	Tom Collins
	- Remove unused var (cp), change random/srandom to rand/srand in
	  vpopmail.c to remove compiler warnings.
	- Fix Makefile to use correct owner/group/permissions for 
	  install-strip.
	- Fix configure to indicate that --enable-auth-logging is default.
 
5.4.0-pre2 - released 21-Dec-03

	*** Note that the configure option for setting the authentication
	*** module has changed.  Instead of --enable-mysql, use
	*** --enable-auth-module=mysql.

	Casey Zacek
	- Keep vlimits_setflags() in vlimits.c when mysql-limits is
	  enabled. [858109]
	- Create maildirsize file when adding new user. [858994]

	Tom Collins
	- open_smtp_relay(): fix address conversion of '::ffff:127.0.0.1'
	  ip format, move code to function and replace calls to
	  getenv("TCPREMOTEIP"). [858586]
	- When optimizing adddomain, rebuild users/cdb after each addition
	  instead of postponing. [859707, temporary fix]
	- Move maildir_to_email() from vdelivermail.c into vpopmail.c,
	  replace dupe code that tries to do the same thing. [859098]
	- Fix domain quota checks to work with hashed directories. [859098]
	- Fix bug when calling format_maildirquota() with NOQUOTA.
	- Document use of NOQUOTA in vadduser. [862315]
	- Fix Makefile so `make install` works from checked out CVS. [863862]
