@@ -1,5 +1,5 @@
 /*
- * $Id: vadduser.c,v 1.6 2003-12-19 05:28:02 tomcollins Exp $
+ * $Id: vadduser.c,v 1.7 2004-01-13 06:05:27 tomcollins Exp $
  * Copyright (C) 1999-2003 Inter7 Internet Technologies, Inc.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -138,7 +138,7 @@ void usage()
     printf("         -c comment (sets the gecos comment field)\n");
     printf("         -e standard_encrypted_password\n");
     printf("         -n no_password\n");
-    printf("         -r generate a random password\n");
+    printf("         -r[len] (generate a len (default 8) char random password)\n");
 }
 
 void get_options(int argc,char **argv)
@@ -158,7 +158,7 @@ void get_options(int argc,char **argv)
     RandomPw = 0;
 
     errflag = 0;
-    while( !errflag && (c=getopt(argc,argv,"svc:nq:e:r")) != -1 ) {
+    while( !errflag && (c=getopt(argc,argv,"svc:nq:e:r::")) != -1 ) {
         switch(c) {
           case 'v':
             printf("version: %s\n", VERSION);
@@ -180,7 +180,10 @@ void get_options(int argc,char **argv)
             break;
           case 'r':
             RandomPw = 1;
-            vrandom_pass (Passwd, 8);
+            if (optarg)
+                vrandom_pass (Passwd, atoi(optarg));
+            else
+                vrandom_pass (Passwd, 8);
             break;
           default:
             errflag = 1;
